truncates decimal values and some bug fixes

--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,7 @@ header {
 
 #screen-top {
     font-size: 1.2rem;
+    height: 3.5rem;
 }
 
 #screen-bottom {
